Cambios sustanciales a la web y fixear los navs

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 -->
 <html>
 <head>
-	<title>Despliegue - CIFP La Laboral by TEMPLATED</title>
+	<title>Web de Pablo</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
+	<meta name="author" content="Pablo R." />
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -18,7 +19,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a class="logo" href="index.html">Despliegue - CIFP La Laboral</a>
+		<a class="logo" href="index.html">Web de Pablo</a>
 		<nav>
 			<a href="#menu">Menu</a>
 		</nav>
@@ -28,8 +29,8 @@
 	<nav id="menu">
 		<ul class="links">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="elements.html">Elements</a></li>
-			<li><a href="generic.html">Ejemplo</a></li>
+			<li><a href="#">Elements</a></li>
+			<li><a href="ejemplo.html">Ejemplo</a></li>
 		</ul>
 	</nav>
 
@@ -37,8 +38,8 @@
 	<section id="banner">
 		<div class="inner">
 			<h1>DESARROLLO WEB</h1>
-			<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+			<p>Una plantilla responsiva orientada a empresas con un video de fondo<br />
+					diseñado por <a href="https://templated.co/">TEMPLATED</a> y lanzado bajo la licencia Creative Commons License.</p>
 		</div>
 		<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 	</section>
@@ -134,7 +135,7 @@
 							<div class="image">
 								<img src="images/pic01.jpg" alt="" />
 									</div>
-								<p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
+								<p class="credit">- <strong>Pablo</strong> <span>Estudiante DAW</span></p>
 							</div>
 						</div>
 				</section>
