--- a/ejemplo.html
+++ b/ejemplo.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-	<title>Despliegue - CIFP La Laboral</title>
+	<title>Página web de Pablo</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="" />
@@ -18,7 +18,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a class="logo" href="index.html">Despliegue - CIFP La Laboral</a>
+		<a class="logo" href="index.html">Página web de Pablo</a>
 		<nav>
 			<a href="#menu">Menu</a>
 		</nav>
