--- a/ejemplo.html
+++ b/ejemplo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+ç<!DOCTYPE HTML>
 <!--
 	Industrious by TEMPLATED
 	templated.co @templatedco
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-	<title>Página web de Pablo</title>
+	<title>Página web de Pableras</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="" />
